--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </div>
 
         <form id="userForm" method="post" class="d-none">
+            <input type="hidden" id="id" value="0">
             <div class="mb-3">
                 <label for="username" class="form-label">Név</label>
                 <input type="text" class="form-control" id="username">
@@ -32,7 +33,7 @@
                 <input type="number" class="form-control" id="salary">
             </div>
             <div class="d-grid">
-                <button type="submit" class="btn btn-outline-primary">Felvétel</button>
+                <button type="submit" class="btn btn-outline-primary" id="userFormSubmitButton">Felvétel</button>
             </div>
         </form>
 
